--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 Успешно прошла следующие курсы:
                   <a href="https://htmlacademy.ru/intensive/htmlcss">«Профессиональный HTML и CSS, уровень 1»</a>
                   <a href="https://htmlacademy.ru/intensive/adaptive">«Профессиональный HTML и CSS, уровень 2»</a>
-                  <a href="https://htmlacademy.ru/javascript">«Профессиональный JavaScript, уровень 1»</a>
+                  <a href="https://htmlacademy.ru/intensive/javascript">«Профессиональный JavaScript, уровень 1»</a>
                 Какое-то время удаленно верстала для интернет-агентства <a href="https://pixelplus.ru/">"Пиксель Плюс".</a>
                 Из личных качеств могу назвать ответственность, внимательность к деталям, аккуратность и усидчивость. 
                 Готова развиваться, учиться и полностью погружаться в работу.
