--- a/index.html
+++ b/index.html
@@ -108,6 +108,10 @@
                         <a class="projects__item-link projects__item-link--repo" href="https://github.com/AlinaDenisova/sirius_a-pharm">Репозиторий</a>
                     </li>
                     <li>
+                        <a class="projects__item-link" href="https://alinadenisova.github.io/cakes/">cakes</a> 
+                        <a class="projects__item-link projects__item-link--repo" href="https://github.com/AlinaDenisova/cakes">Репозиторий</a>
+                    </li>
+                    <li>
                         <a class="projects__item-link" href="https://alinadenisova.github.io/test_business/">test business</a> 
                         <a class="projects__item-link projects__item-link--repo" href="https://github.com/AlinaDenisova/test_business">Репозиторий</a>
                     </li>
@@ -133,7 +137,7 @@
                     </li>                
                     <li>
                         <a class="projects__item-link" href="https://alinadenisova.github.io/barbershop/">barbershop</a> 
-                        <a class="projects__item-link projects__item-link--repo" href="https://github.com/AlinaDenisova/gbarbershop">Репозиторий</a>
+                        <a class="projects__item-link projects__item-link--repo" href="https://github.com/AlinaDenisova/barbershop">Репозиторий</a>
                     </li>
                 </ul>
             </section>
